backend inventoryPart4
